--- a/_harp/index.ejs
+++ b/_harp/index.ejs
@@ -1,14 +1,33 @@
 <div class="contenedor-logos">
-    <amp-img src="img/logo.png" width="200" height="200" ></amp-img>
-    <amp-img src="img/live.png" width="300" height="200" ></amp-img>
+    <div class="cont-media">
+        <amp-img src="img/logo.png" width="200" height="80" data-amp-auto-lightbox-disable ></amp-img>
+    </div>
+    <div class="cont-media">
+        <amp-img src="img/live.png" width="300" height="160" data-amp-auto-lightbox-disable ></amp-img>
+    </div>
 </div>
 
-<h1>Streaming Mar del Plata</h1>
-<h2>Transmisiones en tiempo real.
-    Recitales, conferencias de prensa, show en vivo,
-    eventos políticos, sociales, empresariales, deportivos o culturales.
-    Transmisión multicámara en vivo con los mas altos estándares de calidad.
-</h2>
-
+<div class="cont-cuerpo">
+    <div class="titulo">
+        <h1>Streaming Mar del Plata y la costa</h1>
+    </div>
+    <div class="intro">
+        <h2>Transmisiones en tiempo real.
+            Recitales, conferencias de prensa, show en vivo,
+            eventos políticos, sociales, empresariales, deportivos o culturales.
+            Transmisión multicámara en vivo con los mas altos estándares de calidad.
+        </h2>
+    </div>
+    <div class="cont-galeria">
+        <div class="marco">
+            <amp-img src="img/imagen1.png" width="150" height="100" layout="responsive" data-amp-auto-lightbox-disable ></amp-img>
+            <amp-img src="img/imagen2.png" width="150" height="100" layout="responsive" data-amp-auto-lightbox-disable ></amp-img>
+            <amp-img src="img/imagen3.png" width="150" height="100" layout="responsive" data-amp-auto-lightbox-disable ></amp-img>
+            <amp-img src="img/imagen4.png" width="150" height="100"layout="responsive" data-amp-auto-lightbox-disable ></amp-img>
+        </div>
+    </div>
+</div>
+<div class="cont-contacto">
     <p>+54 9 2234 00 6806</p>
     <p>info@avecontenidos.com </p>
+</div>
